--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -26,7 +26,6 @@
             android:id="@+id/toolbar_title"
             android:layout_width="match_parent"
             android:layout_height="@dimen/title_bar_height"
-            android:layout_below="@+id/statusheight"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:ellipsize="end"
@@ -39,11 +38,18 @@
 
     </RelativeLayout>
 
-    <include
-        layout="@layout/item_comment"
+    <FrameLayout
+        android:id="@+id/fl_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ll_toolbar" />
+<!--    <include-->
+<!--        layout="@layout/item_comment"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/ll_toolbar" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
