--- a/app/src/main/res/layout/fragment_store_comment.xml
+++ b/app/src/main/res/layout/fragment_store_comment.xml
@@ -1,154 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/nestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    android:background="@color/white"
-    android:paddingTop="10dp">
-
-
-
-
-    <TextView
-        android:id="@+id/tv_point"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/color_FF5050"
-        android:textSize="32sp"
-        android:layout_marginLeft="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="4.8"/>
-
-    <TextView
-        android:id="@+id/tv_des"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/color_7C7877"
-        android:textSize="11sp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="6dp"
-        app:layout_constraintLeft_toRightOf="@id/tv_point"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="商家评分"/>
-
-    <me.zhanghai.android.materialratingbar.MaterialRatingBar
-        android:layout_width="wrap_content"
-        android:layout_height="16dp"
-        app:layout_constraintLeft_toRightOf="@id/tv_point"
-        app:layout_constraintTop_toBottomOf="@id/tv_des"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="2dp"
-        app:mrb_progressTint="@color/color_FF6100"
-        app:mrb_secondaryProgressTint="@color/color_E9E9E9"
-        android:rating="4.6"
-        style="@style/Widget.MaterialRatingBar.RatingBar.Small" />
-
-
-
-    <TextView
-        android:id="@+id/tv_manyidu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/color_7C7877"
-        android:textSize="11sp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="6dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="配送满意度"/>
-    <TextView
-        android:id="@+id/tv_manyidu_num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/color_3B3838"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_marginTop="2dp"
-        android:layout_marginRight="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_manyidu"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_manyidu"
-        android:text="99%"/>
-
-    <TextView
-        android:id="@+id/tv_baozhuang"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/color_7C7877"
-        android:textSize="11sp"
-        android:layout_marginTop="6dp"
-        android:layout_marginRight="32dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/tv_manyidu"
-        android:text="包装"/>
-
-
-    <TextView
-        android:id="@+id/tv_baozhuang_num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/color_3B3838"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_marginTop="2dp"
-        android:layout_marginRight="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_baozhuang"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_baozhuang"
-        android:text="4.9"/>
-
-
-    <TextView
-        android:id="@+id/tv_kouwei"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/color_7C7877"
-        android:textSize="11sp"
-        android:layout_marginTop="6dp"
-        android:layout_marginRight="32dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/tv_baozhuang"
-        android:text="口味"/>
-
-
-    <TextView
-        android:id="@+id/tv_kouwei_num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/color_3B3838"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_marginTop="2dp"
-        android:layout_marginRight="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_kouwei"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_kouwei"
-        android:text="4.8"/>
-
-
-    <View
-        android:id="@+id/line"
-        app:layout_constraintTop_toBottomOf="@+id/tv_point"
-        android:layout_marginTop="20dp"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/color_F5F5F5"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/store_point"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:paddingTop="10dp">
+
+            <TextView
+                android:id="@+id/tv_point"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="4.8"
+                android:textColor="@color/color_FF5050"
+                android:textSize="32sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_des"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="6dp"
+                android:text="商家评分"
+                android:textColor="@color/color_7C7877"
+                android:textSize="11sp"
+                app:layout_constraintLeft_toRightOf="@id/tv_point"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <me.zhanghai.android.materialratingbar.MaterialRatingBar
+                style="@style/Widget.MaterialRatingBar.RatingBar.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="16dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="2dp"
+                android:rating="4.6"
+                app:layout_constraintLeft_toRightOf="@id/tv_point"
+                app:layout_constraintTop_toBottomOf="@id/tv_des"
+                app:mrb_progressTint="@color/color_FF6100"
+                app:mrb_secondaryProgressTint="@color/color_E9E9E9" />
 
 
-    <include layout="@layout/item_comment"
-        app:layout_constraintTop_toBottomOf="@+id/line"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"  />
+            <TextView
+                android:id="@+id/tv_manyidu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_marginRight="10dp"
+                android:text="配送满意度"
+                android:textColor="@color/color_7C7877"
+                android:textSize="11sp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_manyidu_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginRight="32dp"
+                android:text="99%"
+                android:textColor="@color/color_3B3838"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@+id/tv_manyidu"
+                app:layout_constraintTop_toBottomOf="@+id/tv_manyidu" />
+
+            <TextView
+                android:id="@+id/tv_baozhuang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_marginRight="32dp"
+                android:text="包装"
+                android:textColor="@color/color_7C7877"
+                android:textSize="11sp"
+                app:layout_constraintRight_toLeftOf="@+id/tv_manyidu"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tv_baozhuang_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginRight="32dp"
+                android:text="4.9"
+                android:textColor="@color/color_3B3838"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@+id/tv_baozhuang"
+                app:layout_constraintTop_toBottomOf="@+id/tv_baozhuang" />
 
 
+            <TextView
+                android:id="@+id/tv_kouwei"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_marginRight="32dp"
+                android:text="口味"
+                android:textColor="@color/color_7C7877"
+                android:textSize="11sp"
+                app:layout_constraintRight_toLeftOf="@+id/tv_baozhuang"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <TextView
+                android:id="@+id/tv_kouwei_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginRight="32dp"
+                android:text="4.8"
+                android:textColor="@color/color_3B3838"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@+id/tv_kouwei"
+                app:layout_constraintTop_toBottomOf="@+id/tv_kouwei" />
+
+
+            <View
+                android:id="@+id/line"
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginTop="20dp"
+                android:background="@color/color_F5F5F5"
+                app:layout_constraintTop_toBottomOf="@+id/tv_point" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <include
+            layout="@layout/item_comment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 </androidx.core.widget.NestedScrollView>
