--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
 
     <!--    <LinearLayout-->
@@ -41,92 +41,92 @@
     <!--            android:text="最新"/>-->
     <!--    </LinearLayout>-->
 
-<!--    <com.bee.user.widget.RadioGroupPlus-->
-<!--        android:id="@+id/rgp_tags"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginLeft="10dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        android:layout_marginRight="10dp"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
+    <!--    <com.bee.user.widget.RadioGroupPlus-->
+    <!--        android:id="@+id/rgp_tags"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginLeft="10dp"-->
+    <!--        android:layout_marginTop="15dp"-->
+    <!--        android:layout_marginRight="10dp"-->
+    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent">-->
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
+    <!--        <LinearLayout-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:orientation="horizontal">-->
 
-<!--            <RadioButton-->
-<!--                android:id="@+id/rb_1"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="27dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/bg_comment_tag_selector"-->
-<!--                android:button="@null"-->
-<!--                android:gravity="center"-->
-<!--                android:text="全部"-->
-<!--                android:textColor="@drawable/color_comment_tag_selector"-->
-<!--                android:textSize="13sp" />-->
+    <!--            <RadioButton-->
+    <!--                android:id="@+id/rb_1"-->
+    <!--                android:layout_width="0dp"-->
+    <!--                android:layout_height="27dp"-->
+    <!--                android:layout_weight="1"-->
+    <!--                android:background="@drawable/bg_comment_tag_selector"-->
+    <!--                android:button="@null"-->
+    <!--                android:gravity="center"-->
+    <!--                android:text="全部"-->
+    <!--                android:textColor="@drawable/color_comment_tag_selector"-->
+    <!--                android:textSize="13sp" />-->
 
-<!--            <RadioButton-->
-<!--                android:id="@+id/rb_2"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="27dp"-->
-<!--                android:layout_marginLeft="10dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/bg_comment_tag_selector"-->
-<!--                android:button="@null"-->
-<!--                android:gravity="center"-->
-<!--                android:text="最新"-->
-<!--                android:textColor="@drawable/color_comment_tag_selector"-->
-<!--                android:textSize="13sp" />-->
+    <!--            <RadioButton-->
+    <!--                android:id="@+id/rb_2"-->
+    <!--                android:layout_width="0dp"-->
+    <!--                android:layout_height="27dp"-->
+    <!--                android:layout_marginLeft="10dp"-->
+    <!--                android:layout_weight="1"-->
+    <!--                android:background="@drawable/bg_comment_tag_selector"-->
+    <!--                android:button="@null"-->
+    <!--                android:gravity="center"-->
+    <!--                android:text="最新"-->
+    <!--                android:textColor="@drawable/color_comment_tag_selector"-->
+    <!--                android:textSize="13sp" />-->
 
-<!--            <RadioButton-->
-<!--                android:id="@+id/rb_3"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="27dp"-->
-<!--                android:layout_marginLeft="10dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/bg_comment_tag_selector"-->
-<!--                android:button="@null"-->
-<!--                android:gravity="center"-->
-<!--                android:text="推荐8"-->
-<!--                android:textColor="@drawable/color_comment_tag_selector"-->
-<!--                android:textSize="13sp" />-->
+    <!--            <RadioButton-->
+    <!--                android:id="@+id/rb_3"-->
+    <!--                android:layout_width="0dp"-->
+    <!--                android:layout_height="27dp"-->
+    <!--                android:layout_marginLeft="10dp"-->
+    <!--                android:layout_weight="1"-->
+    <!--                android:background="@drawable/bg_comment_tag_selector"-->
+    <!--                android:button="@null"-->
+    <!--                android:gravity="center"-->
+    <!--                android:text="推荐8"-->
+    <!--                android:textColor="@drawable/color_comment_tag_selector"-->
+    <!--                android:textSize="13sp" />-->
 
-<!--            <RadioButton-->
-<!--                android:id="@+id/rb_4"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="27dp"-->
-<!--                android:layout_marginLeft="10dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/bg_comment_tag_selector"-->
-<!--                android:button="@null"-->
-<!--                android:gravity="center"-->
-<!--                android:text="吐槽1"-->
-<!--                android:textColor="@drawable/color_comment_tag_selector"-->
-<!--                android:textSize="13sp" />-->
+    <!--            <RadioButton-->
+    <!--                android:id="@+id/rb_4"-->
+    <!--                android:layout_width="0dp"-->
+    <!--                android:layout_height="27dp"-->
+    <!--                android:layout_marginLeft="10dp"-->
+    <!--                android:layout_weight="1"-->
+    <!--                android:background="@drawable/bg_comment_tag_selector"-->
+    <!--                android:button="@null"-->
+    <!--                android:gravity="center"-->
+    <!--                android:text="吐槽1"-->
+    <!--                android:textColor="@drawable/color_comment_tag_selector"-->
+    <!--                android:textSize="13sp" />-->
 
-<!--            <RadioButton-->
-<!--                android:id="@+id/rb_5"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="27dp"-->
-<!--                android:layout_marginLeft="10dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/bg_comment_tag_selector"-->
-<!--                android:button="@null"-->
-<!--                android:gravity="center"-->
-<!--                android:text="有图"-->
-<!--                android:textColor="@drawable/color_comment_tag_selector"-->
-<!--                android:textSize="13sp" />-->
-<!--        </LinearLayout>-->
-<!--    </com.bee.user.widget.RadioGroupPlus>-->
+    <!--            <RadioButton-->
+    <!--                android:id="@+id/rb_5"-->
+    <!--                android:layout_width="0dp"-->
+    <!--                android:layout_height="27dp"-->
+    <!--                android:layout_marginLeft="10dp"-->
+    <!--                android:layout_weight="1"-->
+    <!--                android:background="@drawable/bg_comment_tag_selector"-->
+    <!--                android:button="@null"-->
+    <!--                android:gravity="center"-->
+    <!--                android:text="有图"-->
+    <!--                android:textColor="@drawable/color_comment_tag_selector"-->
+    <!--                android:textSize="13sp" />-->
+    <!--        </LinearLayout>-->
+    <!--    </com.bee.user.widget.RadioGroupPlus>-->
 
     <com.bee.user.widget.FlowTagLayout
         android:id="@+id/tags"
-        android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp" />
 
     <TextView
         android:id="@+id/tv_content_only"
@@ -139,11 +139,17 @@
         android:text="只看有内容"
         android:textColor="@color/color_3B3838"
         android:textSize="12sp" />
-
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="20dp" />
+
+<!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
+<!--        android:id="@+id/swipe_refresh_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
+
+<!--       -->
+<!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
 </LinearLayout>
