--- a/app/src/main/res/layout/item_trade_list.xml
+++ b/app/src/main/res/layout/item_trade_list.xml
@@ -21,11 +21,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="14dp"
-        android:textStyle="bold"
         android:layout_toRightOf="@+id/icon_type"
         android:text=""
         android:textColor="@color/color_282525"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
 
 
