--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,14 +7,13 @@
     android:background="@color/white">
 
 
-
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:elevation="0dp"
         android:background="@drawable/btn_gradient_yellow"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:elevation="0dp">
 
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -31,6 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <View
                     android:id="@+id/status_bar1"
                     android:layout_width="match_parent"
@@ -46,14 +46,12 @@
                     android:paddingRight="10dp">
 
 
-
-
                     <RelativeLayout
                         android:id="@+id/rl_unread"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true">
 
                         <ImageView
                             android:id="@+id/iv_msg"
@@ -79,17 +77,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
-                        android:drawableLeft="@drawable/icon_dingwe_bai"
-                        android:drawablePadding="8dp"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="100dp"
-                        android:text=""
+                        android:drawableLeft="@drawable/icon_dingwe_bai"
                         android:drawableRight="@drawable/icon_xiangxiaxuanze"
-                        android:singleLine="true"
+                        android:drawablePadding="8dp"
                         android:ellipsize="end"
+                        android:singleLine="true"
+                        android:text=""
                         android:textColor="@color/white"
                         android:textSize="16sp" />
-
 
 
                 </RelativeLayout>
@@ -132,7 +129,6 @@
 
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
-
 
 
         <LinearLayout
@@ -194,10 +190,11 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:paddingBottom="40dp" />
 
     </androidx.core.widget.NestedScrollView>
 
