--- a/app/src/main/res/layout/head_activity_food_comment2.xml
+++ b/app/src/main/res/layout/head_activity_food_comment2.xml
@@ -140,44 +140,44 @@
         android:paddingBottom="15dp"
         android:layout_height="wrap_content">
 
-        <!--            <TextView-->
-        <!--                android:id="@+id/tv_money_pre"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--                app:layout_constraintTop_toTopOf="parent"-->
-        <!--                android:textColor="@color/color_FF5050"-->
-        <!--                android:textSize="12sp"-->
-        <!--                android:layout_marginTop="6dp"-->
-        <!--                android:text="¥"/>-->
-        <!--            <TextView-->
-        <!--                android:id="@+id/tv_money"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                app:layout_constraintLeft_toRightOf="@+id/tv_money_pre"-->
-        <!--                app:layout_constraintTop_toTopOf="parent"-->
-        <!--                android:textColor="@color/color_FF5050"-->
-        <!--                android:textStyle="bold"-->
-        <!--                android:textSize="18sp"-->
-        <!--                android:text="10"/>-->
+                    <TextView
+                        android:id="@+id/tv_money_pre"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:textColor="@color/color_FF5050"
+                        android:textSize="12sp"
+                        android:layout_marginTop="6dp"
+                        android:text="¥"/>
+                    <TextView
+                        android:id="@+id/tv_money"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintLeft_toRightOf="@+id/tv_money_pre"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:textColor="@color/color_FF5050"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:text="10"/>
 
-        <!--            <TextView-->
-        <!--                android:id="@+id/tv_money_past"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                app:layout_constraintBottom_toBottomOf="@+id/tv_money_pre"-->
-        <!--                app:layout_constraintLeft_toRightOf="@+id/tv_money"-->
-        <!--                android:layout_marginLeft="8dp"-->
-        <!--                android:textColor="@color/color_ccc"-->
-        <!--                android:textSize="11sp"-->
-        <!--                android:text="¥10"/>-->
+                    <TextView
+                        android:id="@+id/tv_money_past"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="@+id/tv_money_pre"
+                        app:layout_constraintLeft_toRightOf="@+id/tv_money"
+                        android:layout_marginLeft="8dp"
+                        android:textColor="@color/color_ccc"
+                        android:textSize="11sp"
+                        android:text="¥10"/>
 
         <TextView
             android:id="@+id/tv_food_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_money_pre"
             android:layout_marginTop="6dp"
             android:textColor="@color/color_282626"
             android:textStyle="bold"
