--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -36,7 +36,7 @@
         android:layout_below="@+id/tv_title"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
-        android:text="新鲜虾肉，只为一口"
+        android:text=""
         android:textColor="@color/color_7C7877"
         android:textSize="12sp" />
 
@@ -45,28 +45,47 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_content"
+        android:background="@drawable/bg_yellow_round_home"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="7dp"
-        android:text="不可用券"
+        android:text=""
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="2dp"
+        android:paddingTop="2dp"
+        android:textSize="10sp"
         android:textColor="@color/color_FF6200"
-        android:textSize="10sp" />
+        android:orientation="horizontal" />
+
+    <TextView
+        android:id="@+id/tv_money_s"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@+id/tv_tag"
+        android:layout_marginTop="12dp"
+        android:text="¥"
+        android:textColor="@color/color_FF5050"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/tv_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_below="@+id/tv_tag"
+        android:layout_toRightOf="@+id/tv_money_s"
         android:layout_marginTop="7dp"
-        android:text="¥0.0"
+        android:layout_alignBottom="@+id/tv_money_s"
+        android:text="0.0"
+        android:textStyle="bold"
         android:textColor="@color/color_FF5050"
-        android:textSize="12sp" />
+        android:textSize="15sp" />
 
     <ImageView
         android:id="@+id/iv_chart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_tag"
+        android:layout_marginTop="4dp"
         android:layout_marginRight="10dp"
         android:layout_alignParentRight="true"
         android:src="@drawable/icon_gouwuche" />
