--- a/app/src/main/res/layout/bottom_food_list.xml
+++ b/app/src/main/res/layout/bottom_food_list.xml
@@ -19,12 +19,11 @@
         android:paddingLeft="10dp"
         android:text="商品详情"/>
 
-    <ImageView
+    <WebView
         android:id="@+id/iv_des"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="@color/color_FF6600"
         android:layout_marginBottom="70dp"/>
 </LinearLayout>
