--- a/app/src/main/res/layout/fragment_chart_nodata.xml
+++ b/app/src/main/res/layout/fragment_chart_nodata.xml
@@ -225,11 +225,26 @@
 
 
 
-        <include layout="@layout/crecyclerview_base"
+<!--        <include layout="@layout/crecyclerview_base"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_below="@+id/tv_title"-->
+<!--            android:layout_above="@+id/cl_qujiesuan"/>-->
+
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swiperefresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/tv_title"
-            android:layout_above="@+id/cl_qujiesuan"/>
+            android:layout_above="@+id/cl_qujiesuan">
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:cacheColorHint="@null"
+                android:scrollbars="none" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </RelativeLayout>
 </RelativeLayout>
