--- a/app/src/main/res/layout/bottom_food_list.xml
+++ b/app/src/main/res/layout/bottom_food_list.xml
@@ -23,7 +23,9 @@
         android:id="@+id/iv_des"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="70dp"/>
+
 </LinearLayout>
